# plano-theme

./: .gitattributes  .gitignore  CONTRIBUTING.md  Makefile  README.md  gitpush.sh  index.theme  meson.build
gnome-shell/: gnome-shell-high-contrast.css  gnome-shell.css  meson.build
gtk-2.0/: assets.txt  buttons.rc  chromium.rc  gtkrc  panel.rc  thunar.rc  xfce-panel.rc
gtk-3.0/: README  _apps.scss  _colors.scss  _common.scss  _drawing.scss  _lightdm.scss  _other.scss  _unity.scss  _variables.scss  _xfce.scss  assets.txt  gtk-contained-dark.css  gtk-contained-dark.scss  gtk-contained.css  gtk-contained.scss  gtk-dark.css  gtk-dark.scss  gtk.css  gtk.scss
gtk/src/Plano-dark-titlebar/: install-alt-gtk2-theme.sh  meson.build
gtk/src/Plano-dark-titlebar/gtk-3.0/: install-alt-theme.sh  meson.build
gtk/src/Plano-dark-titlebar/gtk-4.0/: install-alt-theme.sh
openbox-3/: max.xbm
openbox/src/light/: meson.build
xfwm4/: bottom-active.xpm  bottom-inactive.xpm  bottom-left-active.xpm  bottom-left-inactive.xpm  bottom-right-active.xpm  bottom-right-inactive.xpm  close-active.xpm  close-inactive.xpm  close-prelight.xpm  close-pressed.xpm  hide-active.xpm  hide-inactive.xpm  hide-prelight.xpm  hide-pressed.xpm  left-active.xpm  left-inactive.xpm  maximize-active.xpm  maximize-inactive.xpm  maximize-prelight.xpm  maximize-pressed.xpm  menu-active.xpm  menu-inactive.xpm  menu-prelight.xpm  menu-pressed.xpm  right-active.xpm  right-inactive.xpm  themerc  title-1-active-shaded.xpm  title-1-active.xpm  title-1-inactive.xpm  title-2-active.xpm  title-2-inactive.xpm  (+12 more)
(+88 files in other folders)
